# xtlog

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  config.py  logger.py  pyproject.toml  utils.py
.github/workflows/: test.yml
docs/: usage.md
examples/: advanced_usage.py  basic_usage.py  callfrom_test.py
tests/: test_logger.py
xtlog/: __init__.py  config.py  examples  logger.py  utils.py
xtlog.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xtlog/examples/: advanced_usage.py  basic_usage.py
